--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(${PROJECT_NAME}
   "src/ui/menu/filemenu.cpp"
   "src/ui/menu/helpmenu.cpp"
   "src/ui/main_window.cpp"
+  "src/ui/dialog_page.cpp"
   "src/ui/popup_page.cpp"
   "src/ui/dialog_window.cpp"
   "src/ui/webengine_page.cpp"
